--- a/styling.css
+++ b/styling.css
@@ -146,6 +146,8 @@ main > section > article[lined] {
 main > section > article[lined] > a[num] {
     text-align: right;
     user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
     color: #7c7c7c;
     text-decoration: none;
     font-family: monospace;
