--- a/styling.css
+++ b/styling.css
@@ -109,6 +109,7 @@ main > section > * {
 main > section > h2 {
     margin: 0;
     color: #7c7c7c;
+    text-align: center;
 }
 
 main > section > h2:first-child {
