--- a/styling.css
+++ b/styling.css
@@ -159,7 +159,7 @@ main > section > article[lined] > a[num] {
 }
 
 main > section > article[lined] > span[txt] {
-    color: #e490ff;
+    color: #ff7bbd;
 }
 
 main > section > article > p {
