--- a/styling.css
+++ b/styling.css
@@ -13,7 +13,7 @@ body {
 }
 
 html, body {
-    background-color: #1e1e1e;
+    background-color: #fff;
 }
 
 
@@ -22,27 +22,27 @@ html, body {
 /* ========================================================================= */
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Playfair Display', serif;
-    color: #fff;
+    color: #000000;
 }
 
 pre {
     font-family: 'Noto Serif', serif;
-    color: #fff;
+    color: #000000;
 }
 
 p {
     font-family: 'Noto Serif', serif;
-    color: #fff;
+    color: #000000;
 }
 
 span {
     font-family: 'Noto Serif', serif;
-    color: #fff;
+    color: #000000;
 }
 
 ul, ol, li {
     font-family: 'Noto Serif', serif;
-    color: #fff;
+    color: #000000;
 }
 
 
@@ -57,32 +57,31 @@ body > header {
     /* padding: 0 50px; */
     width: 90%;
     margin: 0 auto;
+    padding-top: 100px;
 }
 
 body > header > * {
     margin: 0;
 }
 
-body > header > h1, body > header > h2 {
-    color: #c9c9c9;
-    font-weight: 100;
-    font-family: 'Playfair Display';
+body > header > h1 {
+    font-family: 'Fredericka the Great', cursive;
+    font-size: 5rem;
+    text-align: center;
+    font-weight: 400;
 }
 
-body > form {
-    display: flex;
-    flex-direction: column;
-    padding: 12px;
-    padding-bottom: 0;
-}
-
-body > form > button {
-    border: 1px solid #2c2c2c;
-    background-color: #1e1e1e;
-    color: #a9a9a9;
+body > header > p {
+    font-family: 'Sail', cursive;
+    max-width: 500px;
+    margin: 0 auto;
 }
 
 
+mark {
+    background-color: #fac5ff8c;
+    padding: 0 10px;
+}
 
 /* ========================================================================= */
 /* MAIN ELEMENT */
@@ -93,103 +92,88 @@ main {
     gap: 25px;
     flex-flow: wrap;
     justify-content: center; */
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 12px;
-    padding: 12px;
+    /* display: grid; */
+    /* grid-template-columns: 1fr 1fr 1fr; */
+    /* grid-gap: 12px; */
+    /* padding: 12px; */
+    display: flex;
+    flex-direction: column;
+    row-gap: 50px;
+    padding: 50px;
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
-
-@media (max-width: 700px) {
-    main {
-        grid-template-columns: 1fr;
-    }
-}
-
-@media (min-width: 700px) and (max-width: 1000px) {
-    main {
-        grid-template-columns: 1fr 1fr;
-    }
-}
-
 
 
 /* ========================================================================= */
 /* MAIN CHILD CONTENT */
 /* ========================================================================= */
-main > section {
-    border: 1px solid #2c2c2c;
+main > article {
+    /* border: 1px solid #2c2c2c;
     border-radius: 3px;
-    box-shadow: 0 0 1px 0px #000;
+    box-shadow: 0 0 1px 0px #000; */
 }
 
-main > section > * {
+main > article > * {
     padding: 12px;
 }
 
-main > section > h2 {
+main > article > h2 {
     margin: 0;
-    color: #7c7c7c;
     text-align: center;
 }
 
-main > section > h2:first-child {
-    border-bottom: 1px solid #2c2c2c;
-    font-family: monospace;
+main > article > h2:first-child {
+    /* border-bottom: 1px solid #2c2c2c; */
     font-weight: 200;
     padding: 4px 8px;
+    color: inherit;
+    text-decoration: none;
+    font-family: 'Fredericka the Great', cursive;
+    /* font-family: 'Sail', cursive; */
+    font-size: 3rem;
+    color: #000000;
 }
 
-main > section > h2:first-child > a {
+main > article > h2:first-child > a {
     color: inherit;
     text-decoration: none;
 }
 
-main > section > pre {
-    margin: 0;
-    /* white-space: break-spaces; */
-    white-space: pre;
-}
-
-main > section > article {
+main > article > div[content] {
     padding: 0;
     display: flex;
     flex-direction: column;
+    row-gap: 20px;
+    max-width: 900px;
+    margin: 0 auto;
 }
 
-main > section > article[lined] {
-    display: grid;
-    grid-template-columns: min-content 1fr;
-    grid-column-gap: 12px;
-    grid-row-gap: 4px;
-    padding: 12px;
-}
 
-main > section > article[lined] > a[num] {
-    text-align: right;
-    user-select: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    color: #7c7c7c;
-    text-decoration: none;
-    font-family: monospace;
-    display: inline-flex;
-    justify-content: center;
-    align-items: flex-start;
-    padding-top: 4px;
-}
-
-main > section > article[lined] > span[txt] {
-    color: #ff7bbd;
-}
-
-main > section > article > p {
+main > article > div[content] > p {
     margin: 0;
+    color: #000000;
+    font-family: 'Sail', cursive;
+    font-size: 1.8rem;
+    hyphens: auto;
+    line-height: 1.5em;
 }
 
-main > section > ol {
-    display: flex;
-    flex-direction: column;
-    padding: 0 50px;
+main > article > div[content] > p::first-letter {
+    font-size: 2em;
 }
+
+
+@media (max-width: 700px) {
+    main > article > div[content] > p {
+        font-size: 1.5rem;
+    }
+}
+
+/* @media (min-width: 700px) {
+    main {
+        padding: 50px;
+    }
+} */
 
 
