--- a/styling.css
+++ b/styling.css
@@ -52,12 +52,12 @@ ul, ol, li {
 body > header {
     /* max-width: 900px; */
     margin: 0 auto;
-    margin-top: 50px;
     margin-bottom: 50px;
     /* padding: 0 50px; */
     width: 90%;
     margin: 0 auto;
     padding-top: 100px;
+    padding-bottom: 20px;
 }
 
 body > header > * {
@@ -100,7 +100,7 @@ main {
     flex-direction: column;
     row-gap: 50px;
     padding: 50px;
-    padding-top: 100px;
+    padding-top: 10px;
     padding-bottom: 100px;
 }
 
