--- a/styling.css
+++ b/styling.css
@@ -81,7 +81,7 @@ body > header > p {
 }
 
 body > header > p > span[translator] {
-    font-size: 1.3em;
+    font-size: 1.6em;
 }
 
 
@@ -174,6 +174,16 @@ main > article > div[content] > p::first-letter {
 @media (max-width: 700px) {
     main > article > div[content] > p {
         font-size: 1.5rem;
+    }
+}
+
+
+@media (max-width: 600px) {
+    main > article > h2:first-child {
+        font-size: 2rem;
+    }
+    main > article > div[content] > p {
+        font-size: 1.2rem;
     }
 }
 
